--- a/app/views/admin/photos/show.html.erb
+++ b/app/views/admin/photos/show.html.erb
@@ -1,8 +1,10 @@
-
-<%= link_to '<=', admin_photo_path(@prior_photo_id, photo_ids: @photo_ids) if @prior_photo_id %>
-<%= link_to '=>', admin_photo_path(@next_photo_id,photo_ids: @photo_ids) if @next_photo_id %>
+<div style="float: right">
+<%= link_to backward_icon, admin_photo_path(@prior_photo_id, photo_ids: @photo_ids) if @prior_photo_id %>
+<%= link_to forward_icon, admin_photo_path(@next_photo_id,photo_ids: @photo_ids) if @next_photo_id %>
+</div>
 
 <%= render partial: "photos/image", locals: { photo: @photo } %>
+
 
 <%= link_to edit_icon, edit_admin_photo_path(@photo) %>
 <%= link_to del_icon, admin_photo_path(@photo), method: :delete,remote: true, data: { confirm: 'Are you sure?' } %>
