Изменил шаблон соглашения о возрасте

--- a/app/views/layouts/user_profile_layout.html.erb
+++ b/app/views/layouts/user_profile_layout.html.erb
@@ -42,12 +42,12 @@
     
   
  
-
+  
   
   
       <%= render partial: 'layouts/copyright' %>   
  
-
+ <%= render 'layouts/age_agreement' %>
 
 </section><!-- container -->
 
