--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div class="form-group">
-  <%= f.input :birth_date, start_year: Time.now.year - 90, end_year: Time.now.year - 8, :input_html => {class: "form-control", :autocomplete => "off"}  %>
+  <%= f.input :birth_date, start_year: Time.zone.now.year - 90, end_year: Time.zone.now.year - 8, :input_html => {class: "form-control", :autocomplete => "off"}  %>
   </div>
   
   <div class="form-group">
