--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div class="form-group">
-  <%= f.input :birth_date, start_year: Time.zone.now.year - 90, end_year: Time.zone.now.year - 8, :input_html => {class: "form-control", :autocomplete => "off"}  %>
+  <%= f.input :birth_date, start_year: Time.zone.now.year - 90, end_year: Time.zone.now.year - 8, as: :date_picker, :input_html => {class: "form-control", :autocomplete => "off"}  %>
   </div>
   
   <div class="form-group">
@@ -72,3 +72,12 @@
 <h3>Cancel my account</h3>
 <p>Unhappy? <%= link_to I18n.t('cancel_account'), registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
 <%= link_to "Back", :back %>
+
+
+<script>
+
+
+   $( "input.date_picker" ).datepicker( $.datepicker.regional[ "ru" ]);
+
+
+</script>
