--- a/app/views/photos/_thumb.html.erb
+++ b/app/views/photos/_thumb.html.erb
@@ -1,3 +1,3 @@
 <a href=<%= path %> class="thumbnail" >
-  <%= image_tag photo.image_url_for_others(current_user, session[:agreed],:thumb), style: "max-height: 150px;", class: "img-responsive" %>
+  <%= image_tag photo.image_url_for_others(current_user, session[:agreed],:thumb), style: "height: 150px;", class: "img-responsive" %>
 </a>
