--- a/app/views/layouts/_photo_menu.html.erb
+++ b/app/views/layouts/_photo_menu.html.erb
@@ -3,7 +3,7 @@
  
   <ul class="dropdown-menu">
     
-    <li><%= link_to 'Галерея', albums_path %></li>
+    <li><%= link_to I18n.t(:galleries), albums_path %></li>
     <li><%= link_to 'Последние фотографии', gallery_index_path %></li>
     
     <li><%= link_to 'Авторы', author_index_path %> </li>
