18+ соглашение на двух языках

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,16 +49,13 @@
        
       </div><!-- content -->
     
-  
- 
-
       <%= render partial: 'layouts/copyright' %> 
   
 
 </section><!-- container -->
 
   
- <%= render 'layouts/age_agreement' %> 
+ <%= render 'age_agreements/text' %> 
     
   
   
