--- a/app/views/layouts/user_profile_layout.html.erb
+++ b/app/views/layouts/user_profile_layout.html.erb
@@ -47,7 +47,7 @@
   
       <%= render partial: 'layouts/copyright' %>   
  
- <%= render 'layouts/age_agreement' %>
+ <%= render 'age_agreements/text' %> 
 
 </section><!-- container -->
 
