--- a/app/views/devise/registrations/new.en.html.erb
+++ b/app/views/devise/registrations/new.en.html.erb
@@ -7,7 +7,8 @@
   <%= f.input :login, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :last_name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
-  <%= f.input :birth_date, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
+  <%= f.input :birth_date, start_year: Time.zone.now.year - 90, end_year: Time.zone.now.year - 8, as: :date_picker, :input_html => {class: "form-control", :autocomplete => "off"}  %>
+
   <%= f.input :email, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :password, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :password_confirmation, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
@@ -17,3 +18,9 @@
   <br/>
 <% end %>
 <%= render "devise/shared/links" %>
+
+
+<script>
+   $("input.date_picker").datepicker($.datepicker.regional["en"])
+    $( "input.date_picker" ).datepicker( "option", "yearRange", "<%= Time.zone.now.year - 90%>:<%= Time.zone.now.year - 5%>" )
+</script>
