--- a/app/views/devise/registrations/new.ru.html.erb
+++ b/app/views/devise/registrations/new.ru.html.erb
@@ -7,7 +7,9 @@
   <%= f.input :login, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :last_name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
-  <%= f.input :birth_date, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
+
+  <%= f.input :birth_date, as: :date, start_year: Time.zone.now.year - 90, end_year: Time.zone.now.year - 10, as: :date_picker, :input_html => {class: "form-control", :autocomplete => "off"}  %>
+
   <%= f.input :email, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :password, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :password_confirmation, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
@@ -17,3 +19,11 @@
   <br/>
 <% end %>
 <%= render "devise/shared/links" %>
+
+<script>
+   // $( "input.date_picker" ).datepicker({yearRange: "<%= Time.zone.now.year - 90%>:<%= Time.zone.now.year - 5%>"});
+
+   // $.datepicker.setDefaults($.datepicker.regional["ru"]);
+    $("input.date_picker").datepicker($.datepicker.regional["ru"])
+    $( "input.date_picker" ).datepicker( "option", "yearRange", "<%= Time.zone.now.year - 90%>:<%= Time.zone.now.year - 5%>" )
+</script>
