--- a/app/views/devise/registrations/new.ru.html.erb
+++ b/app/views/devise/registrations/new.ru.html.erb
@@ -1,3 +1,4 @@
+
 <h2><%= t("sign_up") %></h2>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {role:'form',:class => 'form-horizontal' }) do |f| %>
   <%= f.error_notification %>
@@ -13,6 +14,11 @@
   <%= f.input :email, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :password, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :password_confirmation, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
+  
+  <br>
+  <%= render "terms" %>  
+  <%= f.input :terms_of_service,  as: :boolean, :input_html => {style: "margin: 0px"} %>
+  
   <br/>
   <%= f.button :submit, 'Зарегистрироваться', :class => 'btn-primary' %>
   <br/>
