--- a/app/views/devise/registrations/_terms.html.erb
+++ b/app/views/devise/registrations/_terms.html.erb
@@ -2,6 +2,6 @@
 
 <div class="panel panel-default">
   <div class="panel-body">
-	Здесь много много правил 
+	<%= raw SiteRule.rules_digest(I18n.locale) %>
   </div>
 </div>
