--- a/app/views/clouds/show.html.erb
+++ b/app/views/clouds/show.html.erb
@@ -1,10 +1,7 @@
-
 <div id="whatever" class="col-md-8">
 
 <% @freqs.each do |f| %>
-  
-  <a href = "<%= tagged_photos_path(user_id: @user, name: f[0]) %>" rel = "<%= f[1] %>"> <%= f[0] %> </a>
-
+  <a href = "<%=  f[0] %>" rel = "<%= f[1] %>"> <%= f[0] %> </a>
 <% end %> 
 </div>
 
