--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -22,7 +22,7 @@
     </div>
 
     <div class="form-group">
-    <%= f.input :theme_tokens, :input_html => {data: {load: @photo.themes.map {|t| {id: t.name,name: t.name}}   }} %>
+    <%= f.input :theme_tokens, :input_html => {data: {load: @photo.theme_list.map {|t| {id: t,name: t}}   }} %>
     </div>
 
   
