--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -1,7 +1,5 @@
 <% breadcrumb :last_photos %>
 
-
-
 <%= will_paginate @last_photos %>
 
 <div class="row">
@@ -11,16 +9,7 @@
       
     </div>
 
-    <% @last_photos.each_with_index do |photo,index| %>
-  
-    <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-      <%= render partial: "photos/thumb", locals: { photo: photo, path: gallery_show_path(photo) } %>
-      <%- l1 = link_to plus_icon, choose_site_photo_path(photo.id) if is_stuff? %>
-      
-      <%= render partial: "photos/caption", locals: { photo: photo, links: [l1] } %>
-    </div>
-
-  <% end %>
+   <%= render partial: 'photo_collection', locals: { photos: @last_photos } %>
   
 </div>
 
