--- a/app/views/layouts/_photo_menu.html.erb
+++ b/app/views/layouts/_photo_menu.html.erb
@@ -1,12 +1,13 @@
-<li class="dropdown <%= "active" if params[:controller] == "albums" || params[:controller] == "gallery" %>">
+<li class="dropdown  <%= "active" if params[:controller] == "albums" || params[:controller] == "gallery" %>">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Фотографии<b class="caret"></b></a>
  
   <ul class="dropdown-menu">
     
     <li><%= link_to I18n.t(:galleries), albums_path %></li>
-    <li><%= link_to 'Последние фотографии', gallery_index_path %></li>
+    <li><%= link_to I18n.t("last_photos"), gallery_index_path %></li>
     
-    <li><%= link_to 'Авторы', author_index_path %> </li>
+    <li><%= link_to I18n.t('authors'), author_index_path %> </li>
+    <li><%= link_to I18n.t('tags'), cloud_index_path %> </li>
 
   </ul>
 </li>
