--- a/app/views/photos/_image.html.erb
+++ b/app/views/photos/_image.html.erb
@@ -21,11 +21,11 @@
 	<% end %>
 </p>
 
-<% if photo.user && photo.themes && (not photo.themes.blank?)  %>
+<% if photo.user && photo.theme_list && (not photo.theme_list.blank?)  %>
 
 <strong>Теги: </strong>
-	<% photo.themes.each do |theme| %>
-	<%= link_to theme,tagged_photos_path(user_id: photo.user.id, name: theme.name)  %>
+	<% photo.theme_list.each do |theme| %>
+	<%= link_to theme,tagged_photos_path(user_id: photo.user.id, name: theme)  %>
 	<% end %>
 <% end  %>
 
