--- a/app/views/author/index.html.erb
+++ b/app/views/author/index.html.erb
@@ -4,8 +4,8 @@
 
 <% @users.each do |user| %>
 
-<li>
-	<%= image_tag(user.avatar_url(:thumb),class: "img-rounded") %>
+<li style = "padding-bottom: 3px">
+	<%= image_tag(user.face,class: "img-rounded") %>
 	<%= link_to user.full_name,user_profile_path(user) %>
   
 </li>
