--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -25,8 +25,8 @@
     <%= f.input :theme_tokens, :input_html => {data: {load: @photo.theme_list.map {|t| {id: t,name: t}}   }} %>
     </div>
 
-  
-  
+    <%= f.hidden_field :user_id, value: @user.id %>
+    
     <%= f.button :submit,value: t(:save), class: "btn btn-default" %>
   
 <% end %>
