--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div style="padding-top: 20px">
    
   <div>
-    <%= @user && @user.avatar && image_tag(@user.avatar_url(:thumb),class: "img-polaroid") %>
+    <%= image_tag(@user.face, class: "img-polaroid") %>
   </div>
   <small ><%= @user && @user.full_name %></small>
 
