Bug selected_ids

--- a/app/views/admin/settings/_form.html.erb
+++ b/app/views/admin/settings/_form.html.erb
@@ -15,7 +15,7 @@
    </div>
 
     <div class="form-group">
-    <%= f.input :articles, :input_html => {data: {load:  Article.ids(@admin_setting.articles).map {|a| {id: a.id,name: a.title}}   }} %>
+    <%= f.input :articles, :input_html => {data: {load:  Article.selected_ids(@admin_setting.articles).map {|a| {id: a.id,name: a.title}}   }} %>
     </div>
 
    <div class="form-group">
