--- a/app/views/gallery/_photo_collection.html.erb
+++ b/app/views/gallery/_photo_collection.html.erb
@@ -1,7 +1,9 @@
+
+
  <% photos.each_with_index do |photo,index| %>
     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
       <%= render partial: "photos/thumb", locals: { photo: photo, path: gallery_show_path(photo) } %>
-      <%- l1 = link_to plus_icon, choose_site_photo_path(photo.id) if is_stuff? %>
+      <%- l1 = link_to(plus_icon, admin_choose_for_album_path(photo.id), remote: true) if is_stuff? %>
       <%= render partial: "photos/caption", locals: { photo: photo, links: [l1] } %>
     </div>
   <% end %>
