В процессе замены SitePhoto не все работает еще

--- a/app/views/admin/albums/show.html.erb
+++ b/app/views/admin/albums/show.html.erb
@@ -17,7 +17,7 @@
   
     <div class="thumbnail">  
      
-      <%= render partial: "photos/thumb", locals: { photo: photo.photo, path: new_admin_album_album_photo_path(@album.id, photo.id) } %>
+      <%= render partial: "photos/thumb", locals: { photo: photo.photo, path: album_photo_path(photo.id) } %>
       <%- l1 = link_to del_icon, admin_album_album_photo_path(@album.id, photo.id), method: :delete, data: { confirm: 'Are you sure?' } if is_stuff? %>
       <%- l2 = link_to edit_icon, edit_admin_album_album_photo_path(@album.id,photo.id) if is_stuff? %>
       <%= render partial: "photos/caption", locals: { photo: photo.photo, links: [l2, l1] } %>
