--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -15,8 +15,8 @@
    	  <div class="col-sm-3" >
     	<div class="thumbnail">  
       <%= render partial: "photos/thumb", locals: { photo: photo, path: album_carousel_path(album.id,photo.id) } %>
-      <%- l1 = link_to del_icon, site_photo_path(photo.id), method: :delete, data: { confirm: 'Are you sure?' } if is_stuff? %>
-      <%= render partial: "photos/caption", locals: { photo: photo, links: [l1] } %>
+ 
+      <%= render partial: "photos/caption", locals: { photo: photo, links: [] } %>
     	</div>
     
   	</div>
