--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,8 +12,8 @@
 
 
 <% if @setting_decorator.photos  %>
-  <div class="fotorama" data-autoplay="true" data-fit="cover" data-width="100%"
-     data-ratio="1200/900" data-transition="crossfade">
+  <div class="fotorama" data-autoplay="true" data-height="100%" data-width="100%"
+      data-transition="crossfade" data-fit="scaledown">
 
      <% @setting_decorator.photos.each do |photo| %>
 
