--- a/app/views/admin/albums/show.html.erb
+++ b/app/views/admin/albums/show.html.erb
@@ -11,16 +11,16 @@
 
 <div class="row">
 
-   <% @album.album_photos.each_with_index do |photo,index| %>
+   <% @album.album_photos.each_with_index do |album_photo,index| %>
   
     <div class="col-sm-3" >
   
     <div class="thumbnail">  
      
-      <%= render partial: "photos/thumb", locals: { photo: photo.photo, path: album_photo_path(photo.id) } %>
-      <%- l1 = link_to del_icon, admin_album_album_photo_path(@album.id, photo.id), method: :delete, data: { confirm: 'Are you sure?' } if is_stuff? %>
-      <%- l2 = link_to edit_icon, edit_admin_album_album_photo_path(@album.id,photo.id) if is_stuff? %>
-      <%= render partial: "photos/caption", locals: { photo: photo.photo, links: [l2, l1] } %>
+      <%= render partial: "photos/thumb", locals: { photo: album_photo.photo, path: gallery_show_path(album_photo.photo) } %>
+      <%- l1 = link_to del_icon, admin_album_album_photo_path(@album.id, album_photo.id), method: :delete, data: { confirm: 'Are you sure?' } if is_stuff? %>
+      <%- l2 = link_to edit_icon, edit_admin_album_album_photo_path(@album.id,album_photo.id) if is_stuff? %>
+      <%= render partial: "photos/caption", locals: { photo: album_photo.photo, links: [l2, l1] } %>
 
      
     </div>
