--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
 
 
 <% if @setting_decorator.photos  %>
-  <div class="fotorama" data-autoplay="true" data-height="100%" data-width="100%"
+  <div class="fotorama" data-autoplay="true" data-width="100%"
       data-transition="crossfade" data-fit="scaledown">
 
      <% @setting_decorator.photos.each do |photo| %>
