--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,11 +36,11 @@
 
       <section class="container" style = "background: #ffffff">
       <div class="content row" >
-      <section class="main col col-lg-12" style = "margin-bottom: 20px">
+      <section class="main col col-lg-12">
           <%= render 'layouts/header' %>
           <%= render 'banners/top' %>       
         </section>
-        <section class="main col col-lg-12" style = "margin-bottom: 20px">
+        <section class="main col col-lg-12">
            
           <%= breadcrumbs :separator => " &rsaquo; " %>
           <%= render 'layouts/messages' %>
