--- a/app/views/competition_photos/index.html.erb
+++ b/app/views/competition_photos/index.html.erb
@@ -1,3 +1,8 @@
+<% meta title: "Тюменский дом фотографии",
+     description: "Конкурсы тюменского дома фотографии",
+     keywords: %w(конкурсы фотография Тюмень)
+%>
+
 <% breadcrumb :competition_photos, @apply_info.competition %>
 
 <br>
