--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -1,3 +1,9 @@
+<% meta title: "Тюменский дом фотографии",
+     description: "Конкурсы тюменского дома фотографии",
+     keywords: %w(конкурсы фотография Тюмень)
+%>
+
+
 <% breadcrumb :competitions %>
 
 <h1><%= t(".list") %></h1>
