--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -1,4 +1,11 @@
+<% meta title: "Тюменский дом фотографии",
+     description: "Последние загруженные фотографии",
+     keywords: %w(последние фотографии)
+%>
+
+
 <% breadcrumb :last_photos %>
+
 
 <%= render partial: 'admin/ajax/chosen' %>
 
