--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,8 @@
+<% meta title: "Тюменский дом фотографии",
+     description: "Тюменский дом фотографии",
+     keywords: %w(Тюмень фотография дом фотоискусство фотоклуб)
+%>
+
 
   <p>
    <h3>Тюменский дом фотографии
