--- a/app/views/about/rules.html.erb
+++ b/app/views/about/rules.html.erb
@@ -1,2 +1,6 @@
+<% meta title: "Тюменский дом фотографии",
+     description: "О Тюменском доме фотографии",
+     keywords: %w(правила тюмень фотография)
+%>
 <h1><%= I18n.t(:rules) %></h1>
 <%= raw SiteRule.rules(I18n.locale) %>
