--- a/app/views/articles/list.html.erb
+++ b/app/views/articles/list.html.erb
@@ -1,3 +1,8 @@
+<% meta title: "Тюменский дом фотографии",
+     description: "Статьи тюменского дома фотографии",
+     keywords: %w(статьи фотография Тюмень)
+%>
+
 <% breadcrumb :articles %>
 
 <h1><%= t("articles_") %></h1>
