--- a/app/views/layouts/user_profile_layout.html.erb
+++ b/app/views/layouts/user_profile_layout.html.erb
@@ -48,6 +48,8 @@
       <%= render partial: 'layouts/copyright' %>   
  
  <%= render 'age_agreements/text' %> 
+ <div id="admin_letter_form"></div>
+
 
 </section><!-- container -->
 
