--- a/app/views/layouts/_age_agreement_button.html.erb
+++ b/app/views/layouts/_age_agreement_button.html.erb
@@ -1,6 +1,6 @@
 <% unless (current_user && current_user.adult?) || session[:agreed] %>
 <li>
-<button class="btn btn-default btn-lg" data-toggle="modal" data-target="#age_agreement">
+<button class="my btn btn-default btn-lg" data-toggle="modal" data-target="#age_agreement">
   18+
 </button>
 </li>
