--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -8,6 +8,8 @@
     <%= render 'layouts/moder_menu' if current_user && current_user.is_stuff? %>
     
     <li class="dropdown-header">Администрирование</li>
+
+    <li><%= link_to 'Статистика', admin_stats_path if can? :manage, Stats %></li>
     <li><%= link_to 'Пользователи', users_path if can? :manage, User %></li>
     <li><%= link_to 'Темы', admin_topics_path if can? :manage, Topic%></li>
     <li><%= link_to "Конкурсы",admin_competitions_path if can? :manage, Competition%></li>
