Не отсылает пустые новости

--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -16,8 +16,8 @@
 
 
   <%= render(:partial => "layouts/current_user_links", locals: {user: @user}) if @user == current_user %>
-
-  <li><%= link_to(letter_icon, admin_user_letter_senders_path(@user), remote: true) if is_stuff? %></li>
+  # TODO: путь к админ контроллеру поправить на общий
+  <li><%= link_to(letter_icon, admin_user_letter_senders_path(@user), remote: true)  %></li>
   
 
 </ul>
