--- a/app/views/articles/list.html.erb
+++ b/app/views/articles/list.html.erb
@@ -17,10 +17,8 @@
         <div class="well">
         <h4> <%= link_to article.title, article_path(article) %> </h4>
 
-        
-        
-        <img src = "<%= article.first_image_src %>"  alt="..." style = "width: 90px; float: left ; padding: 5px;" >
-        
+        <img src = "<%= post_image(article) %>"  alt="..." style = "width: 90px; float: left ; padding: 5px;" >
+
         <%= raw article.digest %> 
         <small class="text-muted"><%= article.author %>, </small>
         <small class="text-muted"><%= ld article.created_at %> </small>
