--- a/app/views/letters/_admin_form.html.erb
+++ b/app/views/letters/_admin_form.html.erb
@@ -9,7 +9,7 @@
     <%= f.input :content,:input_html => {class: "form-control"} %>
     </div>
     <div class="form-group">
-    <%= f.input :user_id, as: :hidden,:input_html => {class: "form-control"} %>
+    <%= f.input :user_id, as: :hidden, :input_html => {class: "form-control",  value: from_user.id} %>
     </div>
 
     <div class="form-group">
