--- a/app/views/layouts/_about_menu.html.erb
+++ b/app/views/layouts/_about_menu.html.erb
@@ -4,8 +4,8 @@
   <ul class="dropdown-menu">
     
    
-    <li><%= link_to 'История', about_us_path %></li>
-    <li><%= link_to 'Правила', about_rules_path %></li>
+    <li><%= link_to t('history'), about_us_path %></li>
+    <li><%= link_to t('rules'), about_rules_path %></li>
     
     
   </ul>
