--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -31,9 +31,9 @@
         <td><%= competition.open? ? green_label(t("open")) : red_label(t("private")) %></td>
         <td><%= ld competition.last_date %></td>
         <td><%= ld competition.open_date %></td>
-        <td><%= link_to(photo_icon,  view_photos_competition_path(competition),:title => "Фотографии") %></td>
+        <td><%= link_to(photo_icon,  view_photos_competition_path(competition),:title => t('photos_')) %></td>
         <td><%= link_to show_icon, competition %></td>
-        <td><%= link_to request_icon, competition_requests_path(competition), method: :post if can?(:request, competition) %></td>
+        <td><%= link_to request_icon, competition_requests_path(competition), title: t('send_request'), method: :post if can?(:request, competition) %></td>
        </tr>
     <% end %>
   </tbody>
