--- a/app/views/layouts/_current_user_links.html.erb
+++ b/app/views/layouts/_current_user_links.html.erb
@@ -2,7 +2,7 @@
 
   <li class="dropdown <%= "active" if params[:controller] == "letters" || params[:controller] == "incoming_letters" %>">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-      Сообщения <span class="caret"></span><%= incoming_mail_icon %>
+      <%= t('messages_') %> <span class="caret"></span><%= incoming_mail_icon %>
     </a>
     <ul class="dropdown-menu">
       <li><%= link_to t("sent_letters"),user_letters_path(user) %></li>
