--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -49,7 +49,9 @@
 <sup><%= t('hints') %></sup>
 <p class="small">
   
-<%= photo_icon %> : <%= t('competition_info') %>
+<%= show_icon %> : <%= t('competition_info') %>
+<br> 
+<%= photo_icon %> : <%= t('competition_photos') %>
 <br>
 <%= request_icon(false) %> : <%= t('send_request') %>
 <br>
