--- a/app/views/layouts/_lang_select.html.erb
+++ b/app/views/layouts/_lang_select.html.erb
@@ -1,10 +1,10 @@
 
 <% if I18n.locale == I18n.default_locale %>
 <li>
-  <%= link_to en_icon, :locale=>'en'%>
+  <%= link_to ru_icon, :locale=>'en'%>
 </li>
 <% else %>
 <li>
- <%= link_to ru_icon, :locale=>'ru'%>
+ <%= link_to en_icon, :locale=>'ru'%>
 </li>
 <%end%>
